More examples added. Minor change in code itself

--- a/Asymmmetric_Bidirectional_Linked_List.ipynb
+++ b/Asymmmetric_Bidirectional_Linked_List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "class AsymLList:\n",
     "    def __init__(self,data, is_bidirect=True):\n",
     "        firstNode=Node(data,is_bidirect)\n",
-    "        if is_bidirect: \n",
+    "        if firstNode.is_bidirect: \n",
     "            self.back=firstNode\n",
     "        else:\n",
     "            self.back=None           \n",
@@ -78,28 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mylist=AsymLList(\"One\",False)"
+    "mylist=AsymLList(\"One\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "mylist.append(\"Two\",False)\n",
-    "mylist.append(\"Three\",False)\n",
-    "mylist.append(\"Four\",False)\n",
+    "mylist.append(\"Three\")\n",
+    "mylist.append(\"Four\")\n",
     "mylist.append(\"Five\", False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "['One', 'Two', 'Three', 'Four', 'Five']"
       ]
      },
-     "execution_count": 525,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,16 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Four', 'Three', 'One']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mylist.backward()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +166,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Four\n",
+      "Three\n",
+      "One\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: \n",
+    "    print(mylist.rwd().data)\n",
+    "    print(mylist.rwd().data)\n",
+    "    print(mylist.rwd().data)\n",
+    "except  TransitionBackError:\n",
+    "    print(\"Unidirectional Graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daylist=AsymLList(\"Mon\",False)\n",
+    "daylist.append(\"Tue\",False)\n",
+    "daylist.append(\"Wed\",False)\n",
+    "daylist.append(\"Thu\",False)\n",
+    "daylist.append(\"Fri\",False)\n",
+    "daylist.append(\"Sat\",False)\n",
+    "daylist.append(\"Sun\",False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daylist.forward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daylist.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon\n",
+      "Tue\n",
+      "Wed\n",
+      "Thu\n",
+      "Fri\n",
+      "Sat\n",
+      "Sun\n",
+      "Mon\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(daylist.fwd().data)\n",
+    "print(daylist.fwd().data)\n",
+    "print(daylist.fwd().data)\n",
+    "print(daylist.fwd().data)\n",
+    "print(daylist.fwd().data)\n",
+    "print(daylist.fwd().data)\n",
+    "print(daylist.fwd().data)\n",
+    "print(daylist.fwd().data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -168,18 +278,11 @@
    ],
    "source": [
     "try: \n",
-    "    print(mylist.rwd().data)\n",
-    "    print(mylist.rwd().data)\n",
+    "    print(daylist.rwd().data)\n",
+    "    print(daylist.rwd().data)\n",
     "except  TransitionBackError:\n",
     "    print(\"Unidirectional Graph\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
