making Node class more generic
- attribute data changed to id (to make the class convenient for inheritance)
- str and repr methods added

--- a/Asymmmetric_Bidirectional_Linked_List.ipynb
+++ b/Asymmmetric_Bidirectional_Linked_List.ipynb
@@ -11,15 +11,21 @@
     "        self.message = message\n",
     "\n",
     "class Node:\n",
-    "    def __init__(self, data, is_bidirect):\n",
-    "        self.data=data\n",
+    "    def __init__(self, node_id, is_bidirect):\n",
+    "        self.id=node_id\n",
     "        self.prev=None\n",
     "        self.next=None\n",
     "        self.is_bidirect=is_bidirect\n",
     "\n",
+    "    def __str__(self):\n",
+    "        return str(self.id)    \n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return \"Node:{} Prev:{} Next:{}\".format(self.id,self.prev,self.next)\n",
+    "\n",
     "class AsymLList:\n",
-    "    def __init__(self,data, is_bidirect=True):\n",
-    "        firstNode=Node(data,is_bidirect)\n",
+    "    def __init__(self,node_id, is_bidirect=True):\n",
+    "        firstNode=Node(node_id,is_bidirect)\n",
     "        if firstNode.is_bidirect: \n",
     "            self.back=firstNode\n",
     "        else:\n",
@@ -27,7 +33,7 @@
     "        self.begin=firstNode\n",
     "        self.last=firstNode\n",
     "        self.current=None\n",
-    "    \n",
+    "\n",
     "    def append(self,data,is_bidirect=True):\n",
     "        newNode=Node(data,is_bidirect)\n",
     "        newNode.prev=self.back \n",
@@ -40,9 +46,10 @@
     "        result=[]\n",
     "        ptr=self.begin\n",
     "        while ptr is not None:\n",
-    "            result.append(ptr.data)\n",
+    "            result.append(ptr)\n",
     "            ptr=ptr.next\n",
     "        return result    \n",
+    "    \n",
     "    def backward(self):\n",
     "        if self.back is None:\n",
     "            #raise TransitionBackError(\"No way backward\")\n",
@@ -50,7 +57,7 @@
     "        result=[]\n",
     "        ptr=self.back\n",
     "        while ptr is not None:\n",
-    "            result.append(ptr.data)\n",
+    "            result.append(ptr)\n",
     "            ptr=ptr.prev\n",
     "        return result    \n",
     "            \n",
@@ -72,7 +79,6 @@
     "            self.current=self.current.prev\n",
     "            if self.current is None:\n",
     "                self.current=self.back\n",
-    "                \n",
     "        return self.current"
    ]
   },
@@ -105,7 +111,11 @@
     {
      "data": {
       "text/plain": [
-       "['One', 'Two', 'Three', 'Four', 'Five']"
+       "[Node:One Prev:None Next:Two,\n",
+       " Node:Two Prev:One Next:Three,\n",
+       " Node:Three Prev:One Next:Four,\n",
+       " Node:Four Prev:Three Next:Five,\n",
+       " Node:Five Prev:Four Next:None]"
       ]
      },
      "execution_count": 4,
@@ -125,7 +135,9 @@
     {
      "data": {
       "text/plain": [
-       "['Four', 'Three', 'One']"
+       "[Node:Four Prev:Three Next:Five,\n",
+       " Node:Three Prev:One Next:Four,\n",
+       " Node:One Prev:None Next:Two]"
       ]
      },
      "execution_count": 5,
@@ -156,12 +168,12 @@
     }
    ],
    "source": [
-    "print(mylist.fwd().data)\n",
-    "print(mylist.fwd().data)\n",
-    "print(mylist.fwd().data)\n",
-    "print(mylist.fwd().data)\n",
-    "print(mylist.fwd().data)\n",
-    "print(mylist.fwd().data)\n"
+    "print(mylist.fwd())\n",
+    "print(mylist.fwd())\n",
+    "print(mylist.fwd())\n",
+    "print(mylist.fwd())\n",
+    "print(mylist.fwd())\n",
+    "print(mylist.fwd())\n"
    ]
   },
   {
@@ -181,9 +193,9 @@
    ],
    "source": [
     "try: \n",
-    "    print(mylist.rwd().data)\n",
-    "    print(mylist.rwd().data)\n",
-    "    print(mylist.rwd().data)\n",
+    "    print(mylist.rwd())\n",
+    "    print(mylist.rwd())\n",
+    "    print(mylist.rwd())\n",
     "except  TransitionBackError:\n",
     "    print(\"Unidirectional Graph\")"
    ]
@@ -211,7 +223,13 @@
     {
      "data": {
       "text/plain": [
-       "['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']"
+       "[Node:Mon Prev:None Next:Tue,\n",
+       " Node:Tue Prev:None Next:Wed,\n",
+       " Node:Wed Prev:None Next:Thu,\n",
+       " Node:Thu Prev:None Next:Fri,\n",
+       " Node:Fri Prev:None Next:Sat,\n",
+       " Node:Sat Prev:None Next:Sun,\n",
+       " Node:Sun Prev:None Next:None]"
       ]
      },
      "execution_count": 9,
@@ -253,14 +271,14 @@
     }
    ],
    "source": [
-    "print(daylist.fwd().data)\n",
-    "print(daylist.fwd().data)\n",
-    "print(daylist.fwd().data)\n",
-    "print(daylist.fwd().data)\n",
-    "print(daylist.fwd().data)\n",
-    "print(daylist.fwd().data)\n",
-    "print(daylist.fwd().data)\n",
-    "print(daylist.fwd().data)\n"
+    "print(daylist.fwd())\n",
+    "print(daylist.fwd())\n",
+    "print(daylist.fwd())\n",
+    "print(daylist.fwd())\n",
+    "print(daylist.fwd())\n",
+    "print(daylist.fwd())\n",
+    "print(daylist.fwd())\n",
+    "print(daylist.fwd())\n"
    ]
   },
   {
@@ -278,8 +296,8 @@
    ],
    "source": [
     "try: \n",
-    "    print(daylist.rwd().data)\n",
-    "    print(daylist.rwd().data)\n",
+    "    print(daylist.rwd())\n",
+    "    print(daylist.rwd())\n",
     "except  TransitionBackError:\n",
     "    print(\"Unidirectional Graph\")"
    ]
@@ -314,3 +332,4 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
+
