append method returns self.last

--- a/Asymmmetric_Bidirectional_Linked_List.ipynb
+++ b/Asymmmetric_Bidirectional_Linked_List.ipynb
@@ -33,7 +33,7 @@
     "        self.begin=firstNode\n",
     "        self.last=firstNode\n",
     "        self.current=None\n",
-    "\n",
+    "        \n",
     "    def append(self,data,is_bidirect=True):\n",
     "        newNode=Node(data,is_bidirect)\n",
     "        newNode.prev=self.back \n",
@@ -41,6 +41,7 @@
     "        if newNode.is_bidirect:\n",
     "            self.back=newNode\n",
     "        self.last=newNode   \n",
+    "        return self.last\n",
     "        \n",
     "    def forward(self):\n",
     "        result=[]\n",
@@ -95,7 +96,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Node:Five Prev:Four Next:None"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mylist.append(\"Two\",False)\n",
     "mylist.append(\"Three\")\n",
@@ -207,12 +219,9 @@
    "outputs": [],
    "source": [
     "daylist=AsymLList(\"Mon\",False)\n",
-    "daylist.append(\"Tue\",False)\n",
-    "daylist.append(\"Wed\",False)\n",
-    "daylist.append(\"Thu\",False)\n",
-    "daylist.append(\"Fri\",False)\n",
-    "daylist.append(\"Sat\",False)\n",
-    "daylist.append(\"Sun\",False)"
+    "for i in [\"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]:\n",
+    "    daylist.append(i, False)\n",
+    "\n"
    ]
   },
   {
@@ -332,4 +341,3 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
-
