--- a/Asymmmetric_Bidirectional_Linked_List.ipynb
+++ b/Asymmmetric_Bidirectional_Linked_List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,10 @@
     "        return \"Node:{} Prev:{} Next:{}\".format(self.id,self.prev,self.next)\n",
     "\n",
     "class AsymLList:\n",
-    "    def __init__(self,node_id, is_bidirect=True):\n",
-    "        firstNode=Node(node_id,is_bidirect)\n",
+    "    def __init__(self,node_id, is_bidirect=True, nodeClass=Node):\n",
+    "        self.nodeClass=nodeClass\n",
+    "        firstNode=self.nodeClass(node_id,is_bidirect)\n",
+    "        \n",
     "        if firstNode.is_bidirect: \n",
     "            self.back=firstNode\n",
     "        else:\n",
@@ -35,7 +37,7 @@
     "        self.current=None\n",
     "        \n",
     "    def append(self,data,is_bidirect=True):\n",
-    "        newNode=Node(data,is_bidirect)\n",
+    "        newNode=self.nodeClass(data,is_bidirect)\n",
     "        newNode.prev=self.back \n",
     "        self.last.next=newNode  \n",
     "        if newNode.is_bidirect:\n",
@@ -53,7 +55,6 @@
     "    \n",
     "    def backward(self):\n",
     "        if self.back is None:\n",
-    "            #raise TransitionBackError(\"No way backward\")\n",
     "            return None\n",
     "        result=[]\n",
     "        ptr=self.back\n",
@@ -73,7 +74,7 @@
     "    \n",
     "    def rwd(self):\n",
     "        if self.back is None:\n",
-    "            raise TransitionBackError(\"No way backward\")\n",
+    "            raise TransitionBackError(\"No way back\")\n",
     "        if self.current is None:\n",
     "            self.current=self.back\n",
     "        else: \n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,7 @@
        "Node:Five Prev:Four Next:None"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +131,7 @@
        " Node:Five Prev:Four Next:None]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +153,7 @@
        " Node:One Prev:None Next:Two]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -214,19 +215,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Node:Sun Prev:None Next:None"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "daylist=AsymLList(\"Mon\",False)\n",
-    "for i in [\"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]:\n",
-    "    daylist.append(i, False)\n",
-    "\n"
+    "daylist.append(\"Tue\",False)\n",
+    "daylist.append(\"Wed\",False)\n",
+    "daylist.append(\"Thu\",False)\n",
+    "daylist.append(\"Fri\",False)\n",
+    "daylist.append(\"Sat\",False)\n",
+    "daylist.append(\"Sun\",False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +256,7 @@
        " Node:Sun Prev:None Next:None]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
