--- a/Asymmmetric_Bidirectional_Linked_List.ipynb
+++ b/Asymmmetric_Bidirectional_Linked_List.ipynb
@@ -11,7 +11,7 @@
     "        self.message = message\n",
     "\n",
     "class Node:\n",
-    "    def __init__(self, node_id, is_bidirect):\n",
+    "    def __init__(self, node_id, is_bidirect, **kwargs):\n",
     "        self.id=node_id\n",
     "        self.prev=None\n",
     "        self.next=None\n",
@@ -24,9 +24,9 @@
     "        return \"Node:{} Prev:{} Next:{}\".format(self.id,self.prev,self.next)\n",
     "\n",
     "class AsymLList:\n",
-    "    def __init__(self,node_id, is_bidirect=True, nodeClass=Node):\n",
+    "    def __init__(self,node_id, is_bidirect=True, nodeClass=Node, **kwargs):\n",
     "        self.nodeClass=nodeClass\n",
-    "        firstNode=self.nodeClass(node_id,is_bidirect)\n",
+    "        firstNode=self.nodeClass(node_id,is_bidirect, **kwargs)\n",
     "        \n",
     "        if firstNode.is_bidirect: \n",
     "            self.back=firstNode\n",
@@ -36,8 +36,8 @@
     "        self.last=firstNode\n",
     "        self.current=None\n",
     "        \n",
-    "    def append(self,data,is_bidirect=True):\n",
-    "        newNode=self.nodeClass(data,is_bidirect)\n",
+    "    def append(self,node_id,is_bidirect=True, **kwargs):\n",
+    "        newNode=self.nodeClass(node_id,is_bidirect, **kwargs)\n",
     "        newNode.prev=self.back \n",
     "        self.last.next=newNode  \n",
     "        if newNode.is_bidirect:\n",
@@ -113,7 +113,7 @@
     "mylist.append(\"Two\",False)\n",
     "mylist.append(\"Three\")\n",
     "mylist.append(\"Four\")\n",
-    "mylist.append(\"Five\", False)"
+    "mylist.append(\"Five\", False)\n"
    ]
   },
   {
@@ -325,13 +325,6 @@
     "except  TransitionBackError:\n",
     "    print(\"Unidirectional Graph\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
